# shatter

./: .gitignore  Cargo.toml  build.sh  install-css.sh  install-ft-crypto.sh  install-htmx.sh  install-script.sh  manifest.json  run.sh  rust-toolchain.toml  tailwind.config.js  watch-css.sh  watch-rust.sh
assets/: manifest.json  script.js  service-worker.js  style.css
files/mlokisa/: vault
files/vaults/: 6d6c6f6b697361
ft-crypto/: Cargo.toml
ft-crypto/src/: lib.rs
src/: endpoints.rs  main.rs  model.rs
src/endpoints/: chat.rs  files.rs  login.rs  mail.rs  profile.rs  register.rs  sse.rs
templates/: chat.html  chat.invite.html  chat.list.create.button.html  chat.list.create.form.html  chat.list.html  chat.nav.username.html  chat.room.html  chat.room.message.html  chat.room.message_block.html  chat.room.nav.html  chat.room.send.html  index.html  login.form.html  login.html  mail.block.html  mail.content.html  mail.html  mail.set-count.html  page-base.html  profile.html  register.form.html  register.html  sse.html  theme.html  theme.txt  utils.html
