[package]
name = "sem"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
	"ft-crypto",
]

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = ["alloc", "std"] }
arrayvec = { version = "0.7.4", features = ["serde"] }
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = { version = "0.7.4", features = ["macros"] }
base64 = "0.21.7"
bson = { version = "2.9.0", features = ["chrono"] }
chrono = { version = "0.4.33", features = ["serde"] }
dashmap = "5.5.3"
env_logger = "0.11.1"
futures = "0.3.30"
getrandom = "0.2.12"
log = "0.4.20"
mini_markdown = "0.3.5"
mongodb = "2.8.0"
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tower-cookies = { version = "0.10.0", features = ["private"] }
tower-http = { version = "0.5.1", features = ["fs"] }
tower-livereload = { version = "0.9.2", optional = true }

[features]
default = ["tower-livereload"]
debug = ["tower-livereload"]
